[package]
name = "lorawan"
version = "0.1.0"
edition = "2021"
description = "lorawan stuff"

# Copyright Cody Schafer. Licensed under the Open Software License version 3.0
license = "OSL-3.0"

[dependencies]
defmt = { version = "*", optional = true }
ufmt = { version = "0.1", optional = true }
modular-bitfield = "*"
get_move = "0.3"
aes = "0.8"
embedded-time = "*"
crc-0x8810 = "*"
